Bug fix: Letter spacing of UI text is wider on macOS Monterey
(issue #376)

--- a/wx-src/pages/options.css
+++ b/wx-src/pages/options.css
@@ -76,6 +76,10 @@ main {
     background-color: var(--color-main-bkgd);
 }
 
+body[data-os="mac"] main {
+    width: 644px;
+}
+
 body[data-locale="de"] main,
 body[data-locale="fr"] main {
     width: 700px;
@@ -395,15 +399,15 @@ body[data-locale="fr"] #skip-backup-label {
 }
 
 body[data-locale="fr"] #wnds-dlgs-opts-dlg {
-    --width: 572px;
+    --width: 576px;
 }
 
 body[data-locale="de"] #wnds-dlgs-opts-dlg {
-    --width: 530px;
+    --width: 534px;
 }
 
 body[data-locale="uk"] #wnds-dlgs-opts-dlg {
-    --width: 550px;
+    --width: 554px;
 }
 
 #wnds-dlgs-opts-dlg fieldset {
@@ -459,17 +463,21 @@ body[data-locale="nl"] #wnds-dlgs-opts-dlg #clpmgr-save-wnd-pos-label {
     --height: 256px;
 }
 
+body[data-os="mac"] #sync-clippings-dlg {
+    --width: 504px;
+}
+
 body[data-locale="de"] #sync-clippings-dlg {
-    --width: 560px;
+    --width: 564px;
 }
 
 body[data-locale|="es"] #sync-clippings-dlg {
-    --width: 610px;
+    --width: 614px;
 }
 
 body[data-locale="nl"] #sync-clippings-dlg,
 body[data-locale="uk"] #sync-clippings-dlg {
-    --width: 512px;
+    --width: 516px;
 }
 
 #sync-clippings-dlg fieldset {
@@ -654,6 +662,10 @@ body[data-os="win"] #turn-off-sync-clippings-ack-dlg #delete-sync-fldr-opt > #de
     top: 72px;
     --width: 410px;
     --height: 320px;
+}
+
+body[data-os="mac"] #about-dlg {
+    --width: 414px;
 }
 
 body[data-locale="de"] #about-dlg {
